// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PCP Vector redisBackfill hook should request series api for backfilling and populate metric values 1`] = `
Array [
  Object {
    "instanceDomain": Object {
      "instances": Object {
        "0": Object {
          "instance": 0,
          "labels": Object {
            "agent": "linux",
            "device_type": "block",
            "domainname": "localdomain",
            "groupid": 976,
            "hostname": "dev",
            "indom_name": "per disk",
            "machineid": "6dabb302d60b402dabcc13dc4fd0fab8",
            "userid": 978,
          },
          "name": "nvme0n1",
        },
        "1": Object {
          "instance": 1,
          "labels": Object {
            "agent": "linux",
            "device_type": "block",
            "domainname": "localdomain",
            "groupid": 976,
            "hostname": "dev",
            "indom_name": "per disk",
            "machineid": "6dabb302d60b402dabcc13dc4fd0fab8",
            "userid": 978,
          },
          "name": "sda",
        },
      },
      "labels": Object {},
    },
    "metadata": Object {
      "indom": "60.1",
      "labels": Object {
        "agent": "linux",
        "device_type": "block",
        "domainname": "localdomain",
        "hostname": "dev",
        "indom_name": "per disk",
        "machineid": "6dabb302d60b402dabcc13dc4fd0fab8",
      },
      "name": "disk.dev.read",
      "sem": "counter",
      "series": "f87250c4ea0e5eca8ff2ca3b3044ba1a6c91a3d9",
      "text-help": "Cumulative number of disk read operations since system boot time (subject
to counter wrap).",
      "text-oneline": "per-disk read operations",
      "type": "u64",
      "units": "count",
    },
    "values": Array [
      Object {
        "timestampMs": 1599320691309.872,
        "values": Array [
          Object {
            "instance": 0,
            "value": 1786894,
          },
          Object {
            "instance": 1,
            "value": 0,
          },
        ],
      },
      Object {
        "timestampMs": 1599320691310.872,
        "values": Array [
          Object {
            "instance": 0,
            "value": 1786896,
          },
          Object {
            "instance": 1,
            "value": 0,
          },
        ],
      },
    ],
  },
  Object {
    "metadata": Object {
      "labels": Object {
        "agent": "linux",
        "domainname": "localdomain",
        "hostname": "dev",
        "machineid": "6dabb302d60b402dabcc13dc4fd0fab8",
      },
      "name": "kernel.all.sysfork",
      "sem": "counter",
      "series": "73d93ee9efa086923d0c9eabc96f98f2b583b8f2",
      "text-help": "fork rate metric from /proc/stat",
      "text-oneline": "fork rate metric from /proc/stat",
      "type": "u64",
      "units": "count",
    },
    "values": Array [
      Object {
        "timestampMs": 1599320691309.872,
        "values": Array [
          Object {
            "instance": null,
            "value": 100,
          },
        ],
      },
      Object {
        "timestampMs": 1599320691310.872,
        "values": Array [
          Object {
            "instance": null,
            "value": 200,
          },
        ],
      },
    ],
  },
]
`;

exports[`PCP Vector redisBackfill hook should request series api for backfilling and populate metric values 2`] = `
Array [
  Array [
    Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
      "params": Object {
        "finish": "now",
        "interval": "1s",
        "series": "73d93ee9efa086923d0c9eabc96f98f2b583b8f2,f87250c4ea0e5eca8ff2ca3b3044ba1a6c91a3d9",
        "start": "-1800second",
      },
      "showSuccessAlert": false,
      "url": "http://localhost:1234/series/values",
    },
  ],
  Array [
    Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
      "params": Object {
        "series": "f87250c4ea0e5eca8ff2ca3b3044ba1a6c91a3d9",
      },
      "showSuccessAlert": false,
      "url": "http://localhost:1234/series/instances",
    },
  ],
  Array [
    Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
      "params": Object {
        "series": "0aeab8b239522ab0640577ed788cc601fc640266,7f3afb6f41e53792b18e52bcec26fdfa2899fa58",
      },
      "showSuccessAlert": false,
      "url": "http://localhost:1234/series/labels",
    },
  ],
]
`;

exports[`PCP Vector should poll disk.dev.read, perform rate conversation and return the result 1`] = `
Object {
  "data": Array [
    Object {
      "fields": Array [
        Object {
          "config": Object {},
          "labels": undefined,
          "name": "Time",
          "type": "time",
          "values": Array [
            10000,
            11000,
          ],
        },
        Object {
          "config": Object {
            "custom": Object {
              "instance": Object {
                "instance": 0,
                "labels": Object {
                  "domainname": "localdomain",
                  "hostname": "dev",
                  "machineid": "6dabb302d60b402dabcc13dc4fd0fab8",
                },
                "name": "nvme0n1",
              },
              "instanceId": 0,
            },
            "displayName": "",
            "unit": undefined,
          },
          "labels": Object {
            "agent": "linux",
            "device_type": "block",
            "domainname": "localdomain",
            "hostname": "dev",
            "indom_name": "per disk",
            "machineid": "6dabb302d60b402dabcc13dc4fd0fab8",
          },
          "name": "disk.dev.read[nvme0n1]",
          "type": "number",
          "values": Array [
            null,
            100,
          ],
        },
        Object {
          "config": Object {
            "custom": Object {
              "instance": Object {
                "instance": 1,
                "labels": Object {
                  "domainname": "localdomain",
                  "hostname": "dev",
                  "machineid": "6dabb302d60b402dabcc13dc4fd0fab8",
                },
                "name": "sda",
              },
              "instanceId": 1,
            },
            "displayName": "",
            "unit": undefined,
          },
          "labels": Object {
            "agent": "linux",
            "device_type": "block",
            "domainname": "localdomain",
            "hostname": "dev",
            "indom_name": "per disk",
            "machineid": "6dabb302d60b402dabcc13dc4fd0fab8",
          },
          "name": "disk.dev.read[sda]",
          "type": "number",
          "values": Array [
            null,
            0,
          ],
        },
      ],
      "meta": Object {
        "custom": Object {
          "context": Object {
            "context": 123,
            "labels": Object {},
          },
          "metric": Object {
            "instanceDomain": Object {
              "instances": Object {
                "0": Object {
                  "instance": 0,
                  "labels": Object {
                    "domainname": "localdomain",
                    "hostname": "dev",
                    "machineid": "6dabb302d60b402dabcc13dc4fd0fab8",
                  },
                  "name": "nvme0n1",
                },
                "1": Object {
                  "instance": 1,
                  "labels": Object {
                    "domainname": "localdomain",
                    "hostname": "dev",
                    "machineid": "6dabb302d60b402dabcc13dc4fd0fab8",
                  },
                  "name": "sda",
                },
              },
              "labels": Object {
                "device_type": "block",
                "domainname": "localdomain",
                "hostname": "dev",
                "indom_name": "per disk",
                "machineid": "6dabb302d60b402dabcc13dc4fd0fab8",
              },
            },
            "metadata": Object {
              "indom": "60.1",
              "labels": Object {
                "agent": "linux",
                "device_type": "block",
                "domainname": "localdomain",
                "hostname": "dev",
                "indom_name": "per disk",
                "machineid": "6dabb302d60b402dabcc13dc4fd0fab8",
              },
              "name": "disk.dev.read",
              "sem": "counter",
              "series": "f87250c4ea0e5eca8ff2ca3b3044ba1a6c91a3d9",
              "text-help": "Cumulative number of disk read operations since system boot time (subject
to counter wrap).",
              "text-oneline": "per-disk read operations",
              "type": "u64",
              "units": "count",
            },
            "values": Array [
              Object {
                "timestampMs": 10000,
                "values": Array [
                  Object {
                    "instance": 0,
                    "value": 100,
                  },
                  Object {
                    "instance": 1,
                    "value": 0,
                  },
                ],
              },
              Object {
                "timestampMs": 11000,
                "values": Array [
                  Object {
                    "instance": 0,
                    "value": 200,
                  },
                  Object {
                    "instance": 1,
                    "value": 0,
                  },
                ],
              },
            ],
          },
          "query": Object {
            "expr": "disk.dev.read",
            "format": "time_series",
            "hostspec": "127.0.0.1",
            "refId": "A",
            "url": "http://localhost:1234",
          },
        },
      },
      "name": undefined,
      "refId": undefined,
    },
  ],
}
`;

exports[`PCP Vector should poll disk.dev.read, perform rate conversation and return the result 2`] = `
Array [
  Array [
    Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
      "params": Object {
        "hostspec": "127.0.0.1",
        "polltimeout": 11,
      },
      "showSuccessAlert": false,
      "url": "http://localhost:1234/pmapi/context",
    },
  ],
  Array [
    Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
      "showSuccessAlert": false,
      "url": "http://localhost:1234/series/ping",
    },
  ],
  Array [
    Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
      "params": Object {
        "context": 123,
        "names": "disk.dev.read",
      },
      "showSuccessAlert": false,
      "url": "http://localhost:1234/pmapi/metric",
    },
  ],
  Array [
    Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
      "params": Object {
        "context": 123,
        "names": "disk.dev.read",
      },
      "showSuccessAlert": false,
      "url": "http://localhost:1234/pmapi/fetch",
    },
  ],
  Array [
    Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
      "params": Object {
        "context": 123,
        "name": "disk.dev.read",
      },
      "showSuccessAlert": false,
      "url": "http://localhost:1234/pmapi/indom",
    },
  ],
  Array [
    Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
      "params": Object {
        "context": 123,
        "names": "disk.dev.read",
      },
      "showSuccessAlert": false,
      "url": "http://localhost:1234/pmapi/fetch",
    },
  ],
]
`;
